--- a/app/components/admin/fieldset_component.html.erb
+++ b/app/components/admin/fieldset_component.html.erb
@@ -5,7 +5,7 @@
       <span class="text-error">*</span>
     <% end %>
     <% if char_counter? %>
-      <span class="text-base-content/50 font-normal ml-2" data-char-counter-target="display">0/<%= char_counter %></span>
+      <span class="text-gray-600 font-normal ml-2" data-char-counter-target="display">0/<%= char_counter %></span>
     <% end %>
   </legend>
   <% if input? %>
