--- a/app/components/admin/item_badge_list_component.html.erb
+++ b/app/components/admin/item_badge_list_component.html.erb
@@ -11,8 +11,8 @@
 <% else %>
   <div class="text-center py-6">
     <div class="inline-flex items-center justify-center w-12 h-12 rounded-xl bg-base-200 mb-2">
-      <%= icon(icon_name, size: '6', css_class: 'text-base-content/30') %>
+      <%= icon(icon_name, size: '6', css_class: 'text-gray-400') %>
     </div>
-    <p class="text-sm text-base-content/50"><%= empty_text %></p>
+    <p class="text-sm text-gray-600"><%= empty_text %></p>
   </div>
 <% end %>
