--- a/app/components/admin/opening_times_component.html.erb
+++ b/app/components/admin/opening_times_component.html.erb
@@ -3,7 +3,7 @@
     <div class="bg-base-200 rounded-lg p-4 min-h-40">
       <div data-opening-times-target="list" class="space-y-2"></div>
       <p data-opening-times-target="empty"
-         class="text-base-content/50 italic text-center py-6 <%= 'hidden' if opening_times? %>">
+         class="text-gray-600 italic text-center py-6 <%= 'hidden' if opening_times? %>">
         No opening times set yet
       </p>
     </div>
