--- a/app/components/admin/tab_panel_component.html.erb
+++ b/app/components/admin/tab_panel_component.html.erb
@@ -4,7 +4,7 @@
        aria-label="<%= label %>"
        data-<%= controller_name %>-target="tab"
        data-hash="<%= hash %>"
-       <%= 'checked="checked"' if checked %> />
+       <%= 'checked="checked"' if checked %>>
 <div class="tab-content bg-base-100 border-base-300 p-6"
      data-<%= controller_name %>-target="panel"
      data-section="<%= hash %>">
