--- a/app/views/admin/calendars/_form.html.erb
+++ b/app/views/admin/calendars/_form.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 
   <%# Radio Tabs - daisyUI tabs-lift %>
-  <div role="tablist" class="tabs tabs-lift mt-6">
+  <div class="tabs tabs-lift mt-6">
     <%= render Admin::TabPanelComponent.new(
       name: 'calendar_tabs',
       label: '📥 Source',
