--- a/app/views/admin/partners/_form.html.erb
+++ b/app/views/admin/partners/_form.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <%# Radio Tabs - daisyUI tabs-lift %>
-  <div role="tablist" class="tabs tabs-lift">
+  <div class="tabs tabs-lift">
     <%= render Admin::TabPanelComponent.new(
       name: 'partner_tabs',
       label: '📋 Basic Info',
