--- a/app/views/admin/partners/edit.html.erb
+++ b/app/views/admin/partners/edit.html.erb
@@ -5,9 +5,9 @@
 <div class="flex items-center justify-between mb-6">
   <div>
     <h1 class="text-2xl font-semibold">Edit Partner</h1>
-    <p class="text-base-content/60 mt-1"><%= @partner.name %></p>
+    <p class="text-gray-600 mt-1"><%= @partner.name %></p>
   </div>
-  <div class="text-sm text-base-content/50">ID: <%= @partner.id %></div>
+  <div class="text-sm text-gray-600">ID: <%= @partner.id %></div>
 </div>
 
 <%= render 'form', model: :partner %>
