--- a/app/views/admin/partnerships/_form.html.erb
+++ b/app/views/admin/partnerships/_form.html.erb
@@ -51,7 +51,7 @@
         </div>
         <div>
           <h3 class="card-title text-lg"><%= t('admin.partnerships.sections.tagged_partners') %></h3>
-          <p class="text-sm text-base-content/60 mt-0.5"><%= t('admin.partnerships.sections.tagged_partners_hint') %></p>
+          <p class="text-sm text-gray-600 mt-0.5"><%= t('admin.partnerships.sections.tagged_partners_hint') %></p>
         </div>
       </div>
 
@@ -78,7 +78,7 @@
           </div>
           <div>
             <h3 class="card-title text-lg"><%= t('admin.partnerships.sections.partnership_admins') %></h3>
-            <p class="text-sm text-base-content/60 mt-0.5"><%= t('admin.partnerships.sections.partnership_admins_hint') %></p>
+            <p class="text-sm text-gray-600 mt-0.5"><%= t('admin.partnerships.sections.partnership_admins_hint') %></p>
           </div>
         </div>
 
