--- a/app/views/admin/sites/_form.html.erb
+++ b/app/views/admin/sites/_form.html.erb
@@ -2,7 +2,7 @@
   <%= render(Admin::ErrorComponent.new(@site)) %>
 
   <%# Radio Tabs - daisyUI tabs-lift %>
-  <div role="tablist" class="tabs tabs-lift">
+  <div class="tabs tabs-lift">
     <%= render Admin::TabPanelComponent.new(
       name: 'site_tabs',
       label: '📋 Basic Info',
