--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= render(Admin::ErrorComponent.new(f.object)) %>
 
 <%# Radio Tabs - daisyUI tabs-lift %>
-<div role="tablist" class="tabs tabs-lift">
+<div class="tabs tabs-lift">
   <%= render Admin::TabPanelComponent.new(
     name: 'user_tabs',
     label: '👤 Personal Details',
