--- a/app/components/admin/card_component.html.erb
+++ b/app/components/admin/card_component.html.erb
@@ -21,7 +21,7 @@
           <%= header_action %>
         <% elsif @header_link %>
           <%= link_to @header_link_text || t('admin.actions.view_all'), @header_link,
-                      class: "text-sm text-placecal-orange hover:text-orange-600" %>
+                      class: "text-sm text-placecal-orange-dark underline hover:no-underline" %>
         <% end %>
       </div>
     <% end %>
