--- a/app/components/admin/toggle_card_component.html.erb
+++ b/app/components/admin/toggle_card_component.html.erb
@@ -3,7 +3,7 @@
   <div>
     <p class="font-medium"><%= title %></p>
     <% if description.present? %>
-      <p class="text-sm text-base-content/60"><%= description %></p>
+      <p class="text-sm text-gray-600"><%= description %></p>
     <% end %>
   </div>
 </label>
