--- a/app/views/admin/calendars/_form_tab_source.html.erb
+++ b/app/views/admin/calendars/_form_tab_source.html.erb
@@ -11,13 +11,16 @@
   <%# Left Column - Calendar Source (2/3 width) %>
   <div class="lg:col-span-2 space-y-4" data-controller="calendar-name-suggest">
     <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= t('admin.calendars.fields.partner_organiser') %> <span class="text-error"><%= t('admin.labels.required') %></span></legend>
+      <%= f.label :partner_id, class: 'fieldset-legend' do %>
+        <%= t('admin.calendars.fields.partner_organiser') %> <span class="text-error"><%= t('admin.labels.required') %></span>
+      <% end %>
       <%= f.input_field :partner_id,
                         as: :select,
                         collection: options_for_organiser,
                         include_blank: t('admin.placeholders.select_model', model: Partner.model_name.human.downcase),
                         selected: (@partner&.id || @calendar.partner_id).to_s,
                         class: 'select select-bordered w-full',
+                        'aria-label': t('admin.calendars.fields.partner_organiser'),
                         data: {
                           controller: "tom-select",
                           calendar_name_suggest_target: "partner",
@@ -27,13 +30,15 @@
     </fieldset>
 
     <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:calendar, :source) %> <span class="text-error"><%= t('admin.labels.required') %></span></legend>
+      <%= f.label :source, class: 'fieldset-legend' do %>
+        <%= attr_label(:calendar, :source) %> <span class="text-error"><%= t('admin.labels.required') %></span>
+      <% end %>
       <%= f.input_field :source, class: 'input input-bordered w-full font-mono text-sm', placeholder: t('admin.calendars.fields.source_placeholder') %>
       <p class="fieldset-label"><%= t('admin.calendars.handbook_hint_html') %></p>
     </fieldset>
 
     <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= t('admin.calendars.fields.calendar_type') %></legend>
+      <%= f.label :importer_mode, t('admin.calendars.fields.calendar_type'), class: 'fieldset-legend' %>
       <%= f.input_field :importer_mode,
                         as: :select,
                         collection: options_for_importer,
@@ -42,14 +47,16 @@
     </fieldset>
 
     <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= t('admin.calendars.fields.calendar_name') %> <span class="text-error"><%= t('admin.labels.required') %></span></legend>
+      <%= f.label :name, class: 'fieldset-legend' do %>
+        <%= t('admin.calendars.fields.calendar_name') %> <span class="text-error"><%= t('admin.labels.required') %></span>
+      <% end %>
       <%= f.input_field :name,
                         class: 'input input-bordered w-full',
                         data: { calendar_name_suggest_target: "name" } %>
       <p class="fieldset-label">
         <span data-calendar-name-suggest-target="suggestion" class="hidden">
           <button type="button"
-                  class="link text-placecal-orange text-xs"
+                  class="link text-placecal-orange-dark text-xs"
                   data-action="calendar-name-suggest#applySuggestion">
             <%= t('admin.calendars.fields.apply_suggestion') %>
           </button>
@@ -65,12 +72,12 @@
         <% calendar_import_sources do |name, domains| %>
           <li class="flex items-start gap-2">
             <span class="text-placecal-orange">•</span>
-            <span><strong><%= name %></strong> <span class="text-base-content/50">(<%= domains.join(', ') %>)</span></span>
+            <span><strong><%= name %></strong> <span class="text-gray-600">(<%= domains.join(', ') %>)</span></span>
           </li>
         <% end %>
       </ul>
       <% if @calendar.importer_used.present? %>
-        <p class="text-xs text-base-content/50 mt-3 pt-3 border-t border-base-300">
+        <p class="text-xs text-gray-600 mt-3 pt-3 border-t border-base-300">
           <%= t('admin.calendars.sections.last_imported_using', importer: @calendar.importer_used) %>
         </p>
       <% end %>
