--- a/app/views/admin/partners/_form_tab_contact.html.erb
+++ b/app/views/admin/partners/_form_tab_contact.html.erb
@@ -14,21 +14,21 @@
       <fieldset class="fieldset">
         <legend class="fieldset-legend"><%= attr_label(:partner, :facebook) %></legend>
         <label class="input input-bordered flex items-center gap-1 pr-1 bg-base-100">
-          <span class="text-base-content/50 text-sm shrink-0">facebook.com/</span>
+          <span class="text-gray-600 text-sm shrink-0">facebook.com/</span>
           <%= f.input_field :facebook_link, class: 'grow bg-transparent border-0 focus:outline-none min-w-0' %>
         </label>
       </fieldset>
       <fieldset class="fieldset">
         <legend class="fieldset-legend"><%= attr_label(:partner, :twitter) %></legend>
         <label class="input input-bordered flex items-center gap-1 bg-base-100">
-          <span class="text-base-content/50">@</span>
+          <span class="text-gray-600">@</span>
           <%= f.input_field :twitter_handle, class: 'grow bg-transparent border-0 focus:outline-none min-w-0' %>
         </label>
       </fieldset>
       <fieldset class="fieldset">
         <legend class="fieldset-legend"><%= attr_label(:partner, :instagram) %></legend>
         <label class="input input-bordered flex items-center gap-1 bg-base-100">
-          <span class="text-base-content/50">@</span>
+          <span class="text-gray-600">@</span>
           <%= f.input_field :instagram_handle, class: 'grow bg-transparent border-0 focus:outline-none min-w-0' %>
         </label>
       </fieldset>
@@ -64,17 +64,17 @@
     ) do %>
       <fieldset class="fieldset">
         <legend class="fieldset-legend"><%= attr_label(:partner, :name) %></legend>
-        <%= f.input_field :partner_name, class: 'input input-bordered w-full bg-base-100 placeholder:text-base-content/30', placeholder: @partner.public_name %>
+        <%= f.input_field :partner_name, class: 'input input-bordered w-full bg-base-100 placeholder:text-gray-400', placeholder: @partner.public_name %>
       </fieldset>
       <fieldset class="fieldset">
         <legend class="fieldset-legend"><%= attr_label(:partner, :email) %></legend>
-        <%= f.input_field :partner_email, class: 'input input-bordered w-full bg-base-100 placeholder:text-base-content/30', placeholder: @partner.public_email,
+        <%= f.input_field :partner_email, class: 'input input-bordered w-full bg-base-100 placeholder:text-gray-400', placeholder: @partner.public_email,
             'data-validate-email': 'true',
             'data-validate-email-message': t('admin.hints.email_validation') %>
       </fieldset>
       <fieldset class="fieldset">
         <legend class="fieldset-legend"><%= attr_label(:partner, :phone) %></legend>
-        <%= f.input_field :partner_phone, class: 'input input-bordered w-full bg-base-100 placeholder:text-base-content/30', placeholder: @partner.public_phone %>
+        <%= f.input_field :partner_phone, class: 'input input-bordered w-full bg-base-100 placeholder:text-gray-400', placeholder: @partner.public_phone %>
       </fieldset>
     <% end %>
   </div>
