--- a/app/views/admin/tags/_form.html.erb
+++ b/app/views/admin/tags/_form.html.erb
@@ -58,7 +58,7 @@
               collection: [['None', ''], ['Category', 'Category'], ['Facility', 'Facility'], ['Partnership', 'Partnership']],
               class: 'select select-bordered w-full',
               id: 'tag_type' %>
-          <p class="fieldset-label text-amber-600">
+          <p class="fieldset-label text-amber-700">
             <%= icon(:warning, size: '4', css_class: 'inline-block mr-1') %>
             Once set, this cannot be changed.
           </p>
@@ -75,7 +75,7 @@
             </div>
             <div>
               <h3 class="card-title text-lg"><%= t('admin.tags.sections.assigned_users') %></h3>
-              <p class="text-sm text-base-content/60 mt-0.5"><%= t('admin.tags.sections.assigned_users_description') %></p>
+              <p class="text-sm text-gray-600 mt-0.5"><%= t('admin.tags.sections.assigned_users_description') %></p>
             </div>
           </div>
 
@@ -95,7 +95,7 @@
     <% end %>
   <% else %>
     <%# Existing record - tabbed interface %>
-    <div role="tablist" class="tabs tabs-lift">
+    <div class="tabs tabs-lift">
       <%= render Admin::TabPanelComponent.new(
         name: 'tag_tabs',
         label: '📋 Basic Info',
