--- a/app/views/admin/tags/edit.html.erb
+++ b/app/views/admin/tags/edit.html.erb
@@ -6,9 +6,9 @@
   <div class="flex items-center justify-between mb-6">
     <div>
       <h1 class="text-2xl font-semibold"><%= @tag.name %></h1>
-      <p class="text-base-content/60 mt-1">System tag</p>
+      <p class="text-gray-600 mt-1">System tag</p>
     </div>
-    <div class="text-sm text-base-content/50">ID: <%= @tag.id %></div>
+    <div class="text-sm text-gray-600">ID: <%= @tag.id %></div>
   </div>
 
   <div role="alert" class="alert alert-warning">
