--- a/app/views/admin/users/profile.html.erb
+++ b/app/views/admin/users/profile.html.erb
@@ -2,7 +2,7 @@
 
 <div class="mb-6">
   <h1 class="text-2xl font-semibold"><%= t('admin.users.profile.title') %></h1>
-  <p class="text-base-content/60 mt-1"><%= current_user.email %></p>
+  <p class="text-gray-600 mt-1"><%= current_user.email %></p>
 </div>
 
 <%= simple_form_for current_user,
@@ -18,7 +18,7 @@
   <%= render(Admin::ErrorComponent.new(current_user)) %>
 
   <%# Radio Tabs - daisyUI tabs-lift %>
-  <div role="tablist" class="tabs tabs-lift">
+  <div class="tabs tabs-lift">
     <%= render Admin::TabPanelComponent.new(
       name: 'profile_tabs',
       label: "👤 #{t('admin.users.profile.tabs.personal')}",
