--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title><%= "#{yield(:title)} | " if content_for?(:title) %>PlaceCal Admin</title>
     <%= csrf_meta_tags %>
@@ -18,7 +18,7 @@
     <%= render "layouts/admin/admin_topbar" %>
 
     <div class="flex pt-14 min-h-screen">
-      <nav class="hidden md:block w-56 flex-shrink-0 bg-gray-100 border-r border-gray-200">
+      <nav aria-label="Main navigation" class="hidden md:block w-56 flex-shrink-0 bg-gray-100 border-r border-gray-200">
         <div class="py-4">
           <%= render "layouts/admin/admin_leftbar" %>
         </div>
